# multi-translate

./: .dockerignore  .gitignore  .importanizerc  Dockerfile  LICENSE.md  README.md  app.py  db.py  default_preferred.md  errors.py  format.sh  generate-helm-docs.sh  gql_query.py  language_preferences.yaml  models.py  pyproject.toml  release.sh  settings.py  skaffold.yaml  translate.py  update-clients.sh
.github/workflows/: npm-publish.yml  publish-to-dockerhub.yml  push-chart.yml  pytest-unit-tests.yaml
charts/: README.md
charts/multi-translate/: .gitignore  .helmignore  Chart.yaml  README.md  values.yaml
charts/multi-translate/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  (+3 more)
clients/: README.md
clients/go/: README.md  api_default.go  client.go  configuration.go  git_push.sh  go.mod  model_http_validation_error.go  model_translation_request.go  model_translation_response.go  model_validation_error.go  response.go
clients/js/: README.md  package.json
clients/python/: .gitlab-ci.yml  .travis.yml  README.md  git_push.sh  setup.py  tox.ini
engines/: __init__.py  amazon.py  base.py  controller.py  deep_l.py  google.py  microsoft.py  papago.py  yandex.py
engines/tests/: test_controller.py  test_google.py  test_microsoft.py
functional_tests/: ft_settings.py  test_meta_routes.py  test_translate.py  test_values.yaml
functional_tests/translate/: test_amazon.py  test_deep_l.py  test_google.py  test_gql_endpoint.py  test_microsoft.py  test_papago.py  test_persistence.py  test_post_method.py  test_translate.py
models/: request.py  response.py
(+60 files in other folders)
